fixed alignwidth settings for full width element on frontend

--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -372,8 +372,6 @@ a:hover {
 	.wp-block[data-align="full"] {
 		width: 100vw;
 		max-width: 100vw;
-		margin-left: calc((-100vw + 100%) / 2);
-		margin-right: calc((-100vw + 100%) / 2);
 	}
 
 	.page-left-sidebar .entry-content .container .alignfull,
@@ -468,8 +466,6 @@ a:hover {
 	.page-template-default .entry-content>.wp-block-columns.alignfull {
 		width: 100vw;
 		max-width: 100vw;
-		margin-left: calc((-100vw + 1140px) / 2);
-		margin-right: calc((-100vw + 1140px) / 2);
 	}
 
 	.page-template-default .entry-content hr:after {
